--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iTeam Project</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 
@@ -13,7 +13,7 @@
         <a class="active" href="index.htm">Home</a>
         <a href="login.html">Sign in</a>
         <a href="#contact">Contact</a>
-      </div>
+    </div>
 	<div class="overlay">
         <h1>iTeam</h1>
         <h3>No More Depression</h3>
@@ -22,11 +22,20 @@
 	    <a href="Patient.htm"><button>Patient</button></a>
         <a href="Family.htm"><button>Family</button></a>
     </div>
+
+    
 </header>
 
 <body>
-   
-    <script src="scripts.js"></script>
+    <h2 class="services_title">What we offer</h2>
+    <br>
+    <p>We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
+      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <div class="w3-row w3-padding-32">
+      <div class="w3-third">
+      
+        <script src="scripts.js"></script>
 </body>
 </html>
 
