--- a/login.html
+++ b/login.html
@@ -17,8 +17,8 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/loginutil.css">
+	<link rel="stylesheet" type="text/css" href="css/loginmain.css">
 <!--===============================================================================================-->
 </head>
 <body>
@@ -26,10 +26,6 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
-				<div class="login100-pic js-tilt" data-tilt>
-					<img src="images/img-01.png" alt="IMG">
-				</div>
-
 				<form class="login100-form validate-form">
 					<span class="login100-form-title">
 						Member Login \ Sign Up
@@ -67,10 +63,7 @@
 					</div>
 
 					<div class="text-center p-t-136">
-						<a class="txt2" href="#">
-							Create your Account
-							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-						</a>
+
 					</div>
 				</form>
 			</div>
